@@ -222,7 +222,7 @@ my $build = OpenGuides::Build->new(
         'CGI::Wiki::Plugin::Categoriser'  => 0,
         'CGI::Wiki::Plugin::Diff'         => '0.07',  # earlier buggy
         'CGI::Wiki::Plugin::Locator::Grid'=> '0.02',  # cope with sqlite 3
-        'CGI::Wiki::Plugin::RSS::ModWiki' => '0.081', # supports DOAP metadata
+        'CGI::Wiki::Plugin::RSS::ModWiki' => '0.09',  # fixes date formatting bug
         'CGI::Wiki::Plugin::RSS::Reader'  => '1.3',   # earlier versions don't support RSS 2.0
         'Class::Accessor'                 => 0,
         'Config::Tiny'                    => 0,
@@ -234,6 +234,7 @@ my $build = OpenGuides::Build->new(
         'LWP::Simple'                     => 0,
         'Parse::RecDescent'               => 0,
         $search_module                    => 0,
+        'POSIX'                           => 0,
         'Template'                        => 0,
         'Test::MockObject'                => '0.07', # earlier doesn't use 'mock'
         'Time::Piece'                     => 0,
